tests/vertical-slice/accept/string_slice_open_right.hew
fn main() -> i64 {
    let s: string = "héllo";
    let slice: string = s[1..];
    println(slice);
    slice.len()
}
