tests/vertical-slice/reject/real_binary_type_error_preserved.hew
fn main() {
    let text: string = "colour";
    let count: i64 = 1;
    let _z = text + count;
}
